--- a/package.json
+++ b/package.json
@@ -14,27 +14,36 @@
     "packages/*"
   ],
   "engines": {
-    "node": ">=23.0.0"
+    "node": ">=18.0.0"
   },
   "scripts": {
-    "build": "npm run build -ws --if-present",
-    "compile": "npm run build && electron-builder build --config electron-builder.mjs",
-    "test": "npx playwright test ./tests/e2e.spec.ts",
+    "build": "pnpm -r --if-present run build",
+    "compile": "pnpm run build && electron-builder build --config electron-builder.mjs",
+    "test": "pnpm dlx playwright test ./tests/e2e.spec.ts",
     "start": "node packages/dev-mode.js",
-    "typecheck": "npm run typecheck -ws --if-present",
+    "typecheck": "pnpm -r --if-present run typecheck",
     "create-renderer": "cd packages && node ./integrate-renderer/create-renderer.js",
-    "integrate-renderer": "npm start --workspace @app/integrate-renderer",
-    "init": "npm run create-renderer && npm run integrate-renderer && npm install"
+    "integrate-renderer": "pnpm start --filter @app/integrate-renderer",
+    "init": "pnpm run create-renderer && pnpm run integrate-renderer && pnpm install",
+    "lint": "biome check .",
+    "lint:fix": "biome check --write .",
+    "format": "biome format --write .",
+    "check": "biome check . && pnpm typecheck"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.2.0",
     "@npmcli/map-workspaces": "4.0.2",
     "@playwright/test": "1.55.0",
+    "@swc/core": "^1.13.4",
     "@types/node": "24.3.0",
+    "@vitejs/plugin-react-swc": "^4.0.1",
     "create-vite": "7.1.1",
-    "electron": "37.3.1",
+    "electron": "^37.3.1",
     "electron-builder": "26.0.12",
     "glob": "11.0.3",
-    "playwright": "^1.55.0"
+    "playwright": "^1.55.0",
+    "terser": "^5.43.1",
+    "vite": "^7.1.3"
   },
   "dependencies": {
     "@app/main": "*"
