🔧 修复CI自动构建：恢复PR触发机制
- 添加新的CI入口文件 pr-ci.yml
- 修复 compile-and-test.yml 中的模板参数
- 确保PR和push事件能正确触发CI流程
- 专注于 react-swc-ts 模板的构建和测试

--- a/.github/workflows/compile-and-test.yml
+++ b/.github/workflows/compile-and-test.yml
@@ -3,11 +3,6 @@ name: Compile and test
 on:
   workflow_call:
     inputs:
-      renderer-template:
-        description: Define what vite template should be used to create renderer in case if renderer package doesn't exist
-        required: false
-        type: string
-        default: ''
       app-version:
         required: true
         type: string
@@ -38,7 +33,7 @@ jobs:
       - uses: ./.github/actions/init-template-with-renderer
         name: Setup boilerplate
         with:
-          renderer-template: ${{inputs.renderer-template}}
+          renderer-template: react-swc-ts
       - run: npm run typecheck --if-present
 
   compile:
@@ -55,7 +50,7 @@ jobs:
       - uses: ./.github/actions/init-template-with-renderer
         name: Setup boilerplate
         with:
-          renderer-template: ${{inputs.renderer-template}}
+          renderer-template: react-swc-ts
 
       - run: npm version "${{inputs.app-version}}" --no-git-tag-version
       - run: npm run compile -- -p never
