🔧 修正CI触发策略：只在main分支触发
- 移除其他分支的push触发
- 只保留针对main分支的PR触发
- 符合标准的CI最佳实践

--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -6,13 +6,14 @@ on:
   push:
     branches:
       - main
-      - 3-优化工具链-optimistic
     paths-ignore:
       - '**.md'
       - .editorconfig
       - '.idea/**'
       - '.vscode/**'
   pull_request:
+    branches:
+      - main
     paths-ignore:
       - '**.md'
       - .editorconfig
