🔧 修复CI工作流参数错误
- 从ci.yml中移除renderer-template参数引用
- 修正deploy工作流的distribution-channel参数
- 确保工作流参数一致性

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,6 @@ jobs:
       attestations: write
     uses: ./.github/workflows/compile-and-test.yml
     with:
-      renderer-template: ${{ inputs.renderer-template }}
       app-version: ${{ needs.prepare.outputs.APP_FULL_VERSION }}
       distribution-channel: ${{inputs.distribution-channel}}
 
@@ -61,5 +60,5 @@ jobs:
       - compile-and-test
     uses: ./.github/workflows/deploy.yml
     with:
-      distribution-channel: ${{ inputs.renderer-template }}
+      distribution-channel: ${{ inputs.distribution-channel }}
       app-version: ${{ needs.prepare.outputs.APP_FULL_VERSION }}
