修复CI移除多余参数

--- a/.github/workflows/compile-and-test.yml
+++ b/.github/workflows/compile-and-test.yml
@@ -32,7 +32,7 @@ jobs:
         name: Setup boilerplate
         with:
           renderer-template: react-swc-ts
-      - run: pnpm run typecheck --if-present
+      - run: pnpm run typecheck
 
   compile:
     strategy:
@@ -55,10 +55,10 @@ jobs:
         env:
           VITE_DISTRIBUTION_CHANNEL: ${{inputs.distribution-channel}}
 
-      - run: pnpm run test --if-present
+      - run: pnpm run test
         if: matrix.os != 'ubuntu-latest'
 
-      - run: xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" -- pnpm run test --if-present
+      - run: xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" -- pnpm run test
         if: matrix.os == 'ubuntu-latest'
 
       - uses: actions/attest-build-provenance@v2
