🔧 修复CI构建：禁用自动发布
- 直接调用electron-builder而不是通过npm脚本
- 明确指定-p never参数禁用发布
- 避免CI环境自动检测导致的发布尝试

--- a/.github/workflows/compile-and-test.yml
+++ b/.github/workflows/compile-and-test.yml
@@ -59,7 +59,9 @@ jobs:
 
       - name: Compile for release
         if: inputs.distribution-channel != 'pr-validation'
-        run: pnpm run compile -- -p never
+        run: |
+          pnpm run build
+          pnpm exec electron-builder build --config electron-builder.mjs -p never
         env:
           VITE_DISTRIBUTION_CHANNEL: ${{inputs.distribution-channel}}
 
