🔧 修正CI发布策略：区分PR验证和正式发布
- PR验证：只构建不发布(-p never)
- 主分支：完整构建并自动发布到GitHub Releases
- 添加GH_TOKEN支持自动发布
- 修复TypeScript类型错误

--- a/.github/workflows/compile-and-test.yml
+++ b/.github/workflows/compile-and-test.yml
@@ -57,13 +57,20 @@ jobs:
         if: inputs.distribution-channel == 'pr-validation'
         run: pnpm run build
 
-      - name: Compile for release
-        if: inputs.distribution-channel != 'pr-validation'
+      - name: Build for testing (no publish)
+        if: inputs.distribution-channel == 'pr-validation'
         run: |
           pnpm run build
           pnpm exec electron-builder build --config electron-builder.mjs -p never
         env:
           VITE_DISTRIBUTION_CHANNEL: ${{inputs.distribution-channel}}
+
+      - name: Build and publish release
+        if: inputs.distribution-channel != 'pr-validation'
+        run: pnpm run compile
+        env:
+          VITE_DISTRIBUTION_CHANNEL: ${{inputs.distribution-channel}}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - run: pnpm run test
         if: matrix.os != 'ubuntu-latest'
