🔧 修复工作流依赖错误：更新dependabot job依赖
- 修复dependabot job引用错误的job名称
- 从run-ci更新为validate-pr
- 确保工作流语法正确

--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -35,7 +35,7 @@ jobs:
       contents: write
       pull-requests: write
     needs:
-      - run-ci
+      - validate-pr
     runs-on: ubuntu-latest
     if: github.event.pull_request.user.login == 'dependabot[bot]'
     steps:
