--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -29,6 +29,7 @@ jobs:
       contents: write
       id-token: write
       attestations: write
+    secrets: inherit
 
   dependabot:
     permissions:
