--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -18,6 +18,9 @@ concurrency:
 permissions:
   contents: write
 
+permissions:
+  contents: read
+
 jobs:
   validate-pr:
     name: Validate PR - TypeScript + React
@@ -27,8 +30,6 @@ jobs:
       distribution-channel: pr-validation
     permissions:
       contents: read
-      id-token: write
-      attestations: write
 
   dependabot:
     permissions:
