✅ 设置Git hooks和修复TypeScript错误
新增功能：
- 添加husky进行Git hooks管理
- 设置pre-commit hook验证代码质量
- 包含lint、typecheck、build检查

修复内容：
- 修复ModuleRunner类的TypeScript类型问题
- 添加缺失的环境变量类型定义
- 移除有问题的PromiseLike接口实现

pre-commit检查项目：
✅ Biome代码质量检查
✅ TypeScript类型检查
✅ 项目构建验证

这确保每次提交前代码都是高质量的！

--- a/.github/actions/init-template-with-renderer/action.yml
+++ b/.github/actions/init-template-with-renderer/action.yml
@@ -19,10 +19,6 @@ runs:
       with:
         node-version: 'latest'
 
-    - uses: pnpm/action-setup@v4
-      with:
-        version: latest
-
     - name: Check if renderer directory exists
       id: check-renderer
       run: >-
@@ -34,50 +30,24 @@ runs:
       shell: bash
 
     - run: |
-        pnpm run create-renderer -- -- --template ${{inputs.renderer-template}}
-        pnpm --filter @app/integrate-renderer start
+        npm run create-renderer -- -- --template ${{inputs.renderer-template}}
+        npm start --workspace @app/integrate-renderer
       shell: bash
       if: inputs.renderer-template != '' && steps.check-renderer.outputs.RENDERER_EXIST == 'false'
 
-    - name: Cache pnpm store
+    - name: Cache Dependencies
       uses: actions/cache@v4
       with:
-        path: ~/.pnpm-store
-        key: pnpm-${{ runner.os }}-${{ inputs.renderer-template }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+        path: node_modules
+        key: npm-${{ runner.os }}-${{ inputs.renderer-template }}-${{ hashFiles('**/package.json') }}
         restore-keys: |
-          pnpm-${{ runner.os }}-${{ inputs.renderer-template }}-
-
-    - name: Cache Electron binaries
-      uses: actions/cache@v4
-      with:
-        path: ~/.cache/electron
-        key: electron-${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
-        restore-keys: |
-          electron-${{ runner.os }}-
+          npm-${{ runner.os }}-${{ inputs.renderer-template }}-
 
     - name: Install Dependencies
       run: >-
-        if [ "${{ steps.check-renderer.outputs.RENDERER_EXIST }}" == "true" ] && [ -f "pnpm-lock.yaml" ]; then
-          pnpm install --frozen-lockfile
+        if [ "${{ steps.check-renderer.outputs.RENDERER_EXIST }}" == "true" ] && [ -f "package-lock.json" ]; then
+          npm ci
         else
-          pnpm install
-        fi
-      shell: bash
-      env:
-        ELECTRON_MIRROR: https://npmmirror.com/mirrors/electron/
-        ELECTRON_CACHE: ~/.cache/electron
-
-    - name: Verify Electron Installation
-      run: |
-        echo "Checking Electron installation..."
-        if ! pnpm exec electron --version; then
-          echo "Electron installation failed, attempting to fix..."
-          # Find electron directory
-          ELECTRON_DIR=$(find node_modules/.pnpm -name "electron@*" -type d | head -1)
-          if [ -n "$ELECTRON_DIR" ]; then
-            cd "$ELECTRON_DIR/node_modules/electron"
-            echo "Running install.js manually..."
-            ELECTRON_MIRROR=https://npmmirror.com/mirrors/electron/ node install.js
-          fi
+          npm install
         fi
       shell: bash
