--- a/.github/workflows/compile-and-test.yml
+++ b/.github/workflows/compile-and-test.yml
@@ -15,12 +15,15 @@ defaults:
     shell: 'bash'
 
 permissions:
-  contents: read
+  contents: write
+  id-token: write
+  attestations: write
 
 env:
   NODE_NO_WARNINGS: 1
   PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
-  ELECTRON_MIRROR: https://npmmirror.com/mirrors/electron/
+  npm_config_audit: false
+  npm_config_fund: false
 
 jobs:
   typeckeck:
@@ -31,7 +34,7 @@ jobs:
         name: Setup boilerplate
         with:
           renderer-template: react-swc-ts
-      - run: pnpm run typecheck
+      - run: npm run typecheck --if-present
 
   compile:
     strategy:
@@ -49,35 +52,18 @@ jobs:
         with:
           renderer-template: react-swc-ts
 
-      - run: pnpm version "${{inputs.app-version}}" --no-git-tag-version
-
-      - name: Build for PR validation
-        if: inputs.distribution-channel == 'pr-validation'
-        run: pnpm run build
-
-      - name: Build for testing (no publish)
-        if: inputs.distribution-channel == 'pr-validation'
-        run: |
-          pnpm run build
-          pnpm exec electron-builder build --config electron-builder.mjs -p never
+      - run: npm version "${{inputs.app-version}}" --no-git-tag-version
+      - run: npm run compile -- -p never
         env:
           VITE_DISTRIBUTION_CHANNEL: ${{inputs.distribution-channel}}
 
-      - name: Build and publish release
-        if: inputs.distribution-channel != 'pr-validation'
-        run: pnpm run compile
-        env:
-          VITE_DISTRIBUTION_CHANNEL: ${{inputs.distribution-channel}}
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - run: npx playwright test
+      - run: npm run test --if-present
         if: matrix.os != 'ubuntu-latest'
 
-      - run: xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" -- npx playwright test
+      - run: xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" -- npm run test --if-present
         if: matrix.os == 'ubuntu-latest'
 
       - uses: actions/attest-build-provenance@v2
-        if: inputs.distribution-channel != 'pr-validation'
         with:
           subject-path: "dist/root*, dist/latest*.yml"
 
