--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "build": "pnpm -r --if-present run build",
     "compile": "pnpm run build && electron-builder build --config electron-builder.mjs",
-    "test": "pnpm dlx playwright test ./tests/e2e.spec.ts",
+    "test": "playwright test",
     "start": "node packages/dev-mode.js",
     "typecheck": "pnpm -r --if-present run typecheck",
     "create-renderer": "cd packages && node ./integrate-renderer/create-renderer.js",
@@ -28,8 +28,7 @@
     "lint": "biome check .",
     "lint:fix": "biome check --write .",
     "format": "biome format --write .",
-    "check": "biome check . && pnpm typecheck",
-    "prepare": "husky"
+    "check": "biome check . && pnpm typecheck"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.2.0",
@@ -42,7 +41,8 @@
     "electron": "37.3.1",
     "electron-builder": "26.0.12",
     "glob": "11.0.3",
-    "playwright": "^1.55.0"
+    "terser": "^5.43.1",
+    "vite": "^7.1.3"
   },
   "dependencies": {
     "@app/main": "*"
