--- a/.github/actions/init-template-with-renderer/action.yml
+++ b/.github/actions/init-template-with-renderer/action.yml
@@ -19,6 +19,11 @@ runs:
       with:
         node-version: 'latest'
 
+    - name: Install pnpm
+      uses: pnpm/action-setup@v4
+      with:
+        version: latest
+
     - name: Check if renderer directory exists
       id: check-renderer
       run: >-
@@ -30,24 +35,24 @@ runs:
       shell: bash
 
     - run: |
-        npm run create-renderer -- -- --template ${{inputs.renderer-template}}
-        npm start --workspace @app/integrate-renderer
+        pnpm run create-renderer -- -- --template ${{inputs.renderer-template}}
+        pnpm start --workspace @app/integrate-renderer
       shell: bash
       if: inputs.renderer-template != '' && steps.check-renderer.outputs.RENDERER_EXIST == 'false'
 
     - name: Cache Dependencies
       uses: actions/cache@v4
       with:
-        path: node_modules
-        key: npm-${{ runner.os }}-${{ inputs.renderer-template }}-${{ hashFiles('**/package.json') }}
+        path: ~/.pnpm-store
+        key: pnpm-${{ runner.os }}-${{ inputs.renderer-template }}-${{ hashFiles('**/pnpm-lock.yaml') }}
         restore-keys: |
-          npm-${{ runner.os }}-${{ inputs.renderer-template }}-
+          pnpm-${{ runner.os }}-${{ inputs.renderer-template }}-
 
     - name: Install Dependencies
       run: >-
-        if [ "${{ steps.check-renderer.outputs.RENDERER_EXIST }}" == "true" ] && [ -f "package-lock.json" ]; then
-          npm ci
+        if [ "${{ steps.check-renderer.outputs.RENDERER_EXIST }}" == "true" ] && [ -f "pnpm-lock.yaml" ]; then
+          pnpm install --frozen-lockfile
         else
-          npm install
+          pnpm install
         fi
       shell: bash
