--- a/.github/workflows/compile-and-test.yml
+++ b/.github/workflows/compile-and-test.yml
@@ -34,7 +34,7 @@ jobs:
         name: Setup boilerplate
         with:
           renderer-template: react-swc-ts
-      - run: npm run typecheck --if-present
+      - run: pnpm run typecheck --if-present
 
   compile:
     strategy:
@@ -52,15 +52,15 @@ jobs:
         with:
           renderer-template: react-swc-ts
 
-      - run: npm version "${{inputs.app-version}}" --no-git-tag-version
-      - run: npm run compile -- -p never
+      - run: pnpm version "${{inputs.app-version}}" --no-git-tag-version
+      - run: pnpm run compile -- -p never
         env:
           VITE_DISTRIBUTION_CHANNEL: ${{inputs.distribution-channel}}
 
-      - run: npm run test --if-present
+      - run: pnpm run test --if-present
         if: matrix.os != 'ubuntu-latest'
 
-      - run: xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" -- npm run test --if-present
+      - run: xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" -- pnpm run test --if-present
         if: matrix.os == 'ubuntu-latest'
 
       - uses: actions/attest-build-provenance@v2
