--- a/.github/actions/init-template-with-renderer/action.yml
+++ b/.github/actions/init-template-with-renderer/action.yml
@@ -44,9 +44,9 @@ runs:
       uses: actions/cache@v4
       with:
         path: ~/.pnpm-store
-        key: pnpm-${{ runner.os }}-${{ inputs.renderer-template }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+        key: pnpm-${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
         restore-keys: |
-          pnpm-${{ runner.os }}-${{ inputs.renderer-template }}-
+          pnpm-${{ runner.os }}-
 
     - name: Install Dependencies
       run: >-
