--- a/.github/workflows/compile-and-test.yml
+++ b/.github/workflows/compile-and-test.yml
@@ -26,15 +26,13 @@ env:
   npm_config_fund: false
 
 jobs:
-  typeckeck:
+  typecheck:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
       - uses: ./.github/actions/init-template-with-renderer
         name: Setup boilerplate
-        with:
-          renderer-template: react-swc-ts
-      - run: pnpm run typecheck --if-present
+      - run: pnpm run typecheck
 
   compile:
     strategy:
@@ -49,18 +47,16 @@ jobs:
       - uses: actions/checkout@v5
       - uses: ./.github/actions/init-template-with-renderer
         name: Setup boilerplate
-        with:
-          renderer-template: react-swc-ts
 
       - run: pnpm version "${{inputs.app-version}}" --no-git-tag-version
       - run: pnpm run compile -- -p never
         env:
           VITE_DISTRIBUTION_CHANNEL: ${{inputs.distribution-channel}}
 
-      - run: pnpm run test --if-present
+      - run: pnpm run test
         if: matrix.os != 'ubuntu-latest'
 
-      - run: xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" -- pnpm run test --if-present
+      - run: xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" -- pnpm run test
         if: matrix.os == 'ubuntu-latest'
 
       - uses: actions/attest-build-provenance@v2
