--- a/.github/actions/init-template-with-renderer/action.yml
+++ b/.github/actions/init-template-with-renderer/action.yml
@@ -43,10 +43,13 @@ runs:
     - name: Cache Dependencies
       uses: actions/cache@v4
       with:
-        path: ~/.pnpm-store
-        key: pnpm-${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+        path: |
+          ~/.pnpm-store
+          ~/.cache/electron
+          ~/.cache/electron-builder
+        key: deps-${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
         restore-keys: |
-          pnpm-${{ runner.os }}-
+          deps-${{ runner.os }}-
 
     - name: Install Dependencies
       run: >-
@@ -56,3 +59,19 @@ runs:
           pnpm install
         fi
       shell: bash
+      env:
+        # 确保Electron能正确下载
+        ELECTRON_CACHE: ~/.cache/electron
+        ELECTRON_BUILDER_CACHE: ~/.cache/electron-builder
+
+    - name: Verify Electron Installation
+      run: |
+        # 检查Electron是否正确安装，如果没有则重新安装
+        if ! pnpm exec electron --version 2>/dev/null; then
+          echo "Electron installation failed, reinstalling..."
+          pnpm rebuild electron
+        fi
+      shell: bash
+      env:
+        ELECTRON_CACHE: ~/.cache/electron
+        ELECTRON_BUILDER_CACHE: ~/.cache/electron-builder
