🔧 强制执行Electron postinstall修复CI
根本问题：pnpm在CI环境中没有正确安装Electron二进制文件

解决方案：强制执行Electron的install.js脚本
- pnpm install后手动执行electron/install.js
- 确保二进制文件被正确下载
- 解决packages/preload构建时找不到electron的问题

这是针对pnpm+Electron在CI环境中的标准解决方案。

--- a/.github/actions/init-template-with-renderer/action.yml
+++ b/.github/actions/init-template-with-renderer/action.yml
@@ -49,5 +49,9 @@ runs:
           pnpm-${{ runner.os }}-
 
     - name: Install Dependencies
-      run: pnpm install --frozen-lockfile
+      run: |
+        pnpm install --frozen-lockfile
+        # 强制执行electron postinstall
+        cd node_modules/.pnpm/electron@*/node_modules/electron
+        node install.js
       shell: bash
