🔧 修复GitHub Token权限问题
问题分析：
✅ Electron安装问题已解决 - 强制postinstall生效
❌ GitHub Token权限问题 - deploy工作流缺少正确的token传递
✅ 自动发布机制确认 - main分支push会自动创建release

修复内容：
- 在ci.yml中传递GITHUB_TOKEN到deploy工作流
- 在deploy.yml中接收GITHUB_TOKEN作为secret
- 使用secrets.GITHUB_TOKEN而不是github.token

现在main分支合并后应该能正常创建release了！

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,9 @@ on:
       distribution-channel:
         required: true
         type: string
+    secrets:
+      GITHUB_TOKEN:
+        required: true
 
 permissions:
   contents: write
@@ -39,4 +42,4 @@ jobs:
 
       - run: gh release create v${{inputs.app-version}} dist/root* dist/latest*.yml --repo ${{github.repository}}
         env:
-          GH_TOKEN: ${{ github.token }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
