🔧 修复GITHUB_TOKEN系统保留名称冲突
错误：secret name GITHUB_TOKEN within workflow_call can not be used since it would collide with system reserved name

修复方案：
- 使用 secrets: inherit 传递所有secrets
- 移除自定义的GITHUB_TOKEN secret定义
- 恢复使用 github.token（这是正确的方式）

secrets: inherit 会自动传递所有可用的secrets和github context，
包括github.token，这是GitHub Actions的标准做法。

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,9 +9,6 @@ on:
       distribution-channel:
         required: true
         type: string
-    secrets:
-      GITHUB_TOKEN:
-        required: true
 
 permissions:
   contents: write
@@ -42,4 +39,4 @@ jobs:
 
       - run: gh release create v${{inputs.app-version}} dist/root* dist/latest*.yml --repo ${{github.repository}}
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ github.token }}
