--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,5 +62,4 @@ jobs:
     with:
       distribution-channel: ${{ inputs.distribution-channel }}
       app-version: ${{ needs.prepare.outputs.APP_FULL_VERSION }}
-    secrets:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    secrets: inherit
