🔧 完整解决GitHub Token和发布问题
问题分析：
- electron-builder在compile阶段就需要GH_TOKEN
- main分支应该直接发布，不需要单独的deploy job
- PR阶段应该只构建不发布

完整解决方案：
1. 在compile-and-test.yml中传递GH_TOKEN环境变量
2. main分支运行 'pnpm run compile' (允许发布)
3. 非main分支运行 'pnpm run compile -- -p never' (禁用发布)
4. 移除重复的deploy job，避免双重发布

现在的流程：
- PR阶段：构建应用，上传Artifacts，不发布
- main分支：构建应用并直接发布到GitHub Releases

需要确保仓库中已设置GH_TOKEN secret！

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,15 +51,4 @@ jobs:
       app-version: ${{ needs.prepare.outputs.APP_FULL_VERSION }}
       distribution-channel: ${{inputs.distribution-channel}}
 
-  deploy:
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    permissions:
-      contents: write
-    needs:
-      - prepare
-      - compile-and-test
-    uses: ./.github/workflows/deploy.yml
-    with:
-      distribution-channel: ${{ inputs.distribution-channel }}
-      app-version: ${{ needs.prepare.outputs.APP_FULL_VERSION }}
-    secrets: inherit
+# deploy job已移除，因为electron-builder在main分支会直接发布到GitHub
