--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "build": "pnpm -r --if-present run build",
-    "compile": "pnpm run build && electron-builder build --config electron-builder.mjs",
+    "compile": "pnpm run build && electron-builder build --config electron-builder.mjs --publish never",
     "test": "playwright test",
     "start": "node packages/dev-mode.js",
     "typecheck": "pnpm -r --if-present run typecheck",
