--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "lint": "biome check .",
     "lint:fix": "biome check --write .",
     "format": "biome format --write .",
-    "check": "biome check . && pnpm typecheck"
+    "check": "biome check . && pnpm typecheck",
+    "prepare": "husky"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.2.0",
@@ -41,6 +42,7 @@
     "electron": "37.3.1",
     "electron-builder": "26.0.12",
     "glob": "11.0.3",
+    "husky": "^9.1.7",
     "terser": "^5.43.1",
     "vite": "^7.1.3"
   },
