--- a/biome.json
+++ b/biome.json
@@ -43,6 +43,16 @@
           }
         }
       }
+    },
+    {
+      "includes": ["tests/e2e.spec.ts"],
+      "linter": {
+        "rules": {
+          "correctness": {
+            "noEmptyPattern": "off"
+          }
+        }
+      }
     }
   ],
   "javascript": {
