--- a/package.json
+++ b/package.json
@@ -35,18 +35,26 @@
     "@biomejs/biome": "^2.2.0",
     "@npmcli/map-workspaces": "4.0.2",
     "@playwright/test": "1.55.0",
+    "@radix-ui/react-primitive": "^2.1.3",
     "@swc/core": "^1.13.4",
     "@types/node": "24.3.0",
     "@vitejs/plugin-react-swc": "^4.0.1",
+    "autoprefixer": "^10.4.21",
+    "clsx": "^2.1.1",
     "create-vite": "7.1.1",
     "electron": "37.3.1",
     "electron-builder": "26.0.12",
     "glob": "11.0.3",
     "husky": "^9.1.7",
+    "postcss": "^8.5.6",
+    "react-icons": "^5.5.0",
+    "tailwindcss": "^4.1.12",
     "terser": "^5.43.1",
     "vite": "^7.1.3"
   },
   "dependencies": {
-    "@app/main": "*"
+    "@app/main": "*",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@shadcn/ui": "^0.0.4"
   }
 }
