--- a/packages/renderer/package.json
+++ b/packages/renderer/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "tw:build": "tailwindcss -i src/index.css -o src/tailwind-output.css --minify"
   },
   "dependencies": {
     "react": "^19.1.1",
