--- a/.github/actions/init-template-with-renderer/action.yml
+++ b/.github/actions/init-template-with-renderer/action.yml
@@ -17,7 +17,7 @@ runs:
 
     - uses: actions/setup-node@v4
       with:
-        node-version: 'latest'
+        node-version: '22'
 
     - name: Install pnpm
       uses: pnpm/action-setup@v4
