--- a/packages/renderer/package.json
+++ b/packages/renderer/package.json
@@ -19,9 +19,10 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.12",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "typescript": "~5.8.3",
-    "vite": "^7.1.2"
+    "vite": "^7.1.3"
   }
 }
