--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@playwright/test": "1.55.0",
     "@radix-ui/react-primitive": "^2.1.3",
     "@swc/core": "^1.13.4",
+    "@tailwindcss/postcss": "^4.1.12",
     "@types/node": "24.3.0",
     "@vitejs/plugin-react-swc": "^4.0.1",
     "autoprefixer": "^10.4.21",
